--- a/.npmignore
+++ b/.npmignore
@@ -14,9 +14,9 @@ TESTS-*.xml
 coverage
 .vscode
 .idea
-*.js
-!karma.conf.js
-!karma-test-shim.js
-*.map
-*.d.ts
-typings
+# Dev #
+*.ts
+!*.d.ts
+tests
+karma.conf.js
+karma-test-shim.js
