--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,5 @@
     "node_modules/@types",
     "typings"
   ],
-  "files": [
-    "./typings/index.d.ts",
-    "./index.ts",
-    "./src/app/tree-view/tree-view.module.ts"
-  ]
+  "files": []
 }
